Refactor Map initialization patterns and migrate string concatenations to text blocks
Signed-off-by: lance <leehaut@gmail.com>